Fixed gallery's horizontal scroll and de-janked the search bar.

--- a/src/Pages/css/gallery.module.css
+++ b/src/Pages/css/gallery.module.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  margin-top: 10px;
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
@@ -33,40 +34,18 @@ body {
 
 .filter-box {
   height: 100%;
-  width: 25vw;
+  width: 250px;
+  min-width: 250px;
   padding-left: 2%;
   padding-top: 2%;
   padding-bottom: 2%;
-  display: inline-block;
-  margin: 1%;
+  display: block;
+  margin-left: 10px;
   border-radius: 5px;
+  box-sizing: border-box;
   border: 1px aliceblue solid;
 }
 
-/* Start of code for Filter Button */
-/* .filter-button-wrap {
-  position: fixed;
-  top: 60px;
-}
-
-.filter-button {
-
-}
-
-.filter-button-icon {
-
-}
-
-.filter-by-text-1 {
-  margin-left: 10px;
-  text-transform: uppercase;
-} */
-
-
-
-/* End of code for Filter button */
-
-/* .filter-by-text-1 is part of the code for the Filter Button */
 .filter-by-text-2 {
   margin-left: 10px;
   text-transform: uppercase;
@@ -174,33 +153,50 @@ input[type="checkbox"]:checked {
 
 /* this is where the filter box stops */
 .search-box {
-  margin: 1%;
+  width: calc(100% - 280px);
   height: 100%;
-  width: 70%;
-  display: inline-block;
+  display: block;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .search-bar {
-  height: 100%;
+  box-sizing: border-box;
+  height: 3rem;
   width: 100%;
-  border: 0.5px solid #9fa2ab;
-  outline: none;
   font-size: 1em;
   display: flex;
+  overflow: hidden;
 }
 
 .search-input {
-  width: 95%;
-  padding: 1%;
-  display: inline-block;
-  font-size: 1.1em;
+  flex-grow: 1;
+  border: 1px solid lightgray;
+  border-radius: 10px 0 0 10px;
+  display: block;
+  padding-left: 10px;
+  font-size: 1em;
+  z-index: 1;
 }
 
 .search-button {
-  width: 5%;
-  height: auto;
+  height: 100%;
+  aspect-ratio: 1/1;
   background-color: white;
-  border: none;
+  border: 1px solid lightgray;
+  margin-left: -1px;
+  border-radius: 0 10px 10px 0;
+  z-index: 1;
+}
+
+.search-button:focus, .search-input:focus {
+  outline: none;
+  border: 2px solid var(--primary);
+  z-index: 2;
+}
+
+.pagination {
+  margin-top: 15px;
 }
 
 .selectable-search-button {
@@ -226,8 +222,14 @@ input[type="checkbox"]:checked {
   z-index: 1;
 }
 
+.card-row {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 .individual-card {
-  width: 50%;
+  width: calc(50% - 7.5px);
 }
 
 .pdf-wrap {
@@ -248,6 +250,7 @@ input[type="checkbox"]:checked {
 .second-part {
   box-shadow: 0 2px 40px -20px #c0c0c0;
   border-radius: 10px;
+  margin-top: 15px;
 }
 
 .first-part {
@@ -255,11 +258,6 @@ input[type="checkbox"]:checked {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-}
-
-.second-part {
-  margin-top: 15px;
 }
 
 canvas {
@@ -318,10 +316,6 @@ canvas {
 
   .filter-box {
     width: 100%;
-  }
-
-  .filter-button {
-    display: none;
   }
 
   .search-box {
